# obs_remote_lambda

./: .gitignore  Cargo.toml
.github/workflows/: lambda.yml
src/: lib.rs
