[package]
name = "cwmc_obs_lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.12.0"
lambda_runtime = "0.12.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.111"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw"] }
http = "1.0.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
aws-config = "1.1"
aws-sdk-ssm = "1.37.0"
aws-sdk-cloudwatchlogs = "1.36.0"
aws-sdk-ec2 = "1.55.0"
aws-smithy-runtime-api = "1.7.1"
