[package]
name = "obs_remote_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw"] }
aws-sdk-cloudwatchlogs = "1.36.0"
aws-sdk-ec2 = "1.55.0"
aws-sdk-ssm = "1.37.0"
aws-smithy-runtime-api = "1.7.1"
http = "1.0.0"
lambda_http = "0.12.0"
lambda_runtime = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }